add delete category operation
